--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
+spring.application.name=local-grpc-server
+spring.datasource.url=jdbc:sqlite:database.db
+
 grpc.server.port=9090
-grpc.server.inProcessName=dev
